# azahar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.ci/: license-header.rb  linux.sh  macos-universal.sh  macos.sh  pack.sh  source.sh
.github/workflows/: build.yml  build_windows_arm64.yml
CMakeModules/: BundleTarget.cmake  DownloadExternals.cmake
src/: CMakeLists.txt
src/android/: build.gradle.kts
src/audio_core/: cubeb_input.cpp
src/citra_meta/: CMakeLists.txt  common_strings.h  main.cpp
src/citra_qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  bootmanager.cpp  bootmanager.h  citra_qt.cpp  citra_qt.h  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  loading_screen.cpp  loading_screen.h  main.ui  qt_swizzle.h  qt_swizzle.mm  uisettings.h  update_checker.cpp  update_checker.h
src/citra_room/: CMakeLists.txt  citra_room.cpp  citra_room.h
src/citra_room_standalone/: CMakeLists.txt  citra_room_standalone.cpp
src/citra_sdl/: citra_sdl.cpp  config.cpp  default_ini.h
src/common/: CMakeLists.txt  apple_utils.h  apple_utils.mm  file_util.cpp  file_util.h  math_util.cpp  settings.cpp  settings.h  zstd_compression.cpp  zstd_compression.h
src/core/: core.cpp  perf_stats.cpp  perf_stats.h
src/installer/: citra.nsi
src/network/: room.cpp
src/video_core/: CMakeLists.txt  gpu.cpp  gpu.h  rasterizer_accelerated.cpp  rasterizer_interface.h  renderer_base.h
tools/: README.md  delete-ignored-files.sh  purge-github-cache.sh  reset-submodules.sh  update-compatibility-list.sh  update-translations.sh
(+177 files in other folders)
